--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "import/no-unresolved": "off",
     "no-shadow": "off",
-    "arrow-parens": ["error", "as-needed"]
+    "arrow-parens": ["error", "as-needed"],
+    "required": {
+      "some": [ "nesting", "id" ]
+    }
   }
 }
