--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-ga": "^3.1.2",
     "sass": "^1.26.10"
   },
   "devDependencies": {
